refactor: use getFirst instead get(0)