@@ -40,8 +40,8 @@ class LanguageServiceTest {
         List<LanguageResponse> result = languageService.getLanguages();
 
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).id()).isEqualTo(1);
-        assertThat(result.get(0).name()).isEqualTo("Portuguese");
+        assertThat(result.getFirst().id()).isEqualTo(1);
+        assertThat(result.getFirst().name()).isEqualTo("Portuguese");
         assertThat(result.get(1).id()).isEqualTo(2);
         assertThat(result.get(1).name()).isEqualTo("English");
         verify(languageRepository).findAll();
